# ems-db

./: .gitignore  DESIGN.md  README.md  design.mmd  main.py  pyproject.toml  queries.sql  schema.sql  sqlite_db.py  usage.md
docs/: 1-schema-diff.md  2-query-interaction-diff.md  2-query-interection-diff.md  query_interection_diff.md  schema_diff.md
mysql/: .env  .my.cnf  Dockerfile  README.Docker.md  compose.yaml  db.py  pyproject.toml  queries.sql  schema.sql  usage.md
mysql/tests/: test_db.py
psql/: .env  .psqlrc  Dockerfile  README.Docker.md  compose.yaml  db.py  echo  pyproject.toml  queries.sql  schema.sql  usage.md
psql/tests/: test_db.py
sqlite/: Dockerfile  README.Docker.md  compose.yaml  db.py  ems  pyproject.toml  queries.sql  schema.sql  usage.md
sqlite/tests/: test_db.py
