[project]
name = "mysql"
version = "0.1.0"
description = "EMS MySQL version"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["mysql-connector-python>=9.3.0"]

[dependency-groups]
dev = ["pytest>=8.3.5", "tabulate>=0.9.0"]

# ------------- ruff lint & format ------------
[tool.ruff.lint]
ignore = [
    "E501", # line too long
    "E203", # whitespace before ':'
    "F401", # module imported but unused
    "F841", # local variable 'x' is assigned to but never used
]
