[project]
name = "psql"
version = "0.1.0"
description = "EMS PostgresSQL version"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["psycopg[binary]>=3.2.6"]

[dependency-groups]
dev = ["pytest>=8.3.5", "tabulate>=0.9.0"]
# ------------- ruff lint & format ------------
[tool.ruff.lint]
ignore = [
    "E501", # line too long
    "E203", # whitespace before ':'
    "F401", # module imported but unused
    "F841", # local variable 'x' is assigned to but never used
]
